[gd_scene load_steps=6 format=3 uid="uid://hvixan4kk2p5"]

[ext_resource type="Script" path="res://Scenes/ui/stats_ui.gd" id="1_0qq2x"]
[ext_resource type="Texture2D" uid="uid://d0edy7thj8ce6" path="res://art/heart.png" id="2_7rqig"]
[ext_resource type="Theme" uid="uid://bhwmfnyyieplb" path="res://main_theme.tres" id="2_re63w"]
[ext_resource type="Texture2D" uid="uid://oe7v35ii8vrs" path="res://art/tile_0102.png" id="3_0gd0o"]
[ext_resource type="Texture2D" uid="uid://dytq0eumwvky6" path="res://art/tile_0074.png" id="5_s1hpr"]

[node name="StatsUI" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -8.0
offset_right = 45.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_0qq2x")

[node name="Health" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HealthImage" type="TextureRect" parent="Health"]
layout_mode = 2
texture = ExtResource("2_7rqig")
expand_mode = 3
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="Health/HealthImage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -3.0
offset_right = 9.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme = ExtResource("2_re63w")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Block" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BlockImage" type="TextureRect" parent="Block"]
layout_mode = 2
texture = ExtResource("3_0gd0o")
stretch_mode = 5

[node name="BlockLabel" type="Label" parent="Block/BlockImage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -3.0
offset_right = 9.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00336968
size_flags_vertical = 1
theme = ExtResource("2_re63w")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Strength" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StrengthImage" type="TextureRect" parent="Strength"]
layout_mode = 2
texture = ExtResource("5_s1hpr")
stretch_mode = 5

[node name="StrengthLabel" type="Label" parent="Strength/StrengthImage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -3.0
offset_right = 9.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00336968
size_flags_vertical = 1
theme = ExtResource("2_re63w")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
